# stac

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.md   calculos1Var.cpp  calculos1Var.hpp  calculos2Var.cpp  calculos2Var.hpp  calculosAlgebra.cpp  calculosAlgebra.hpp  calculosIA.cpp  calculosIA.hpp  calculosMatriz.cpp  calculosMatriz.hpp  calculosMuestreo.cpp  calculosMuestreo.hpp  calculosNVar.cpp  calculosNVar.hpp  calculosTablasContBid.cpp  calculosTablasContBid.hpp  cli.cpp  cli.hpp  combinatoria.cpp  combinatoria.hpp  distribucionesDiscretas.cpp  distribucionesDiscretas.hpp  entrada.cpp  entrada.hpp  entradaYSalida1Var.cpp  entradaYSalida2Var.cpp  entradaYSalidaMatriz.cpp  entradaYSalidaNVar.cpp  entradaYSalidaVector.cpp  funcDatosBasicas.cpp  funcDatosBasicas.hpp  funcMate.cpp  funcMate.hpp  funcMatematicasBasicas.cpp  funcMatematicasBasicas.hpp  (+55 more)
include/: calculos1Var.hpp  calculos2Var.hpp  calculosAlgebra.hpp  calculosTablasContBid.hpp  cli.hpp  combinatoria.hpp  distribucionesDiscretas.hpp  entrada.hpp  funcMatematicasBasicas.hpp  mas.hpp  matriz.hpp  mgi.hpp  mmInfinit.hpp  mmc.hpp  mmi.hpp  mmik.hpp  modelo.hpp  modeloColas.hpp  row.hpp  salida.hpp  textosMenus.hpp  vector.hpp
source/: CMakeLists.txt  Makefile  calculos1Var.cpp  calculos1Var.hpp  calculos2Var.cpp  calculos2Var.hpp  calculosAlgebra.cpp  calculosAlgebra.hpp  calculosIA.cpp  calculosIA.hpp  calculosMuestreo.cpp  calculosMuestreo.hpp  calculosNVar.cpp  calculosNVar.hpp  cli.cpp  cli.hpp  combinatoria.cpp  distribucionesDiscretas.cpp  distribucionesDiscretas.hpp  funcMatematicasBasicas.cpp  funcMatematicasBasicas.hpp  main.cpp  mas.cpp  mas.hpp  matriz.cpp  matriz.hpp  menu1Var.cpp  menu2Var.cpp  menu2Var.hpp  menuAlgebra.cpp  menuAlgebra.hpp  menuCombinatoria.cpp  menuDistribDiscretas.cpp  menuIA.cpp  menuIA.hpp  menuIO.cpp  menuMuestreo.cpp  menuMuestreo.hpp  menuNVar.cpp  menuNVar.hpp  (+12 more)
src/: calculos1Var.cpp  calculos2Var.cpp  calculosAlgebra.cpp  calculosTablasContBid.cpp  cli.cpp  combinatoria.cpp  distribucionesDiscretas.cpp  entrada.cpp  funcMatematicasBasicas.cpp  generadoresCongruenciales.cpp  main.cpp  mas.cpp  matriz.cpp  menu1Var.cpp  menu2Var.cpp  menuAlgebra.cpp  menuCombinatoria.cpp  menuDistribDiscretas.cpp  menuInferencia.cpp  menuMuestreo.cpp  menuNVar.cpp  menuTablasCont.cpp  mgi.cpp  mmc.cpp  mmi.cpp  mmik.cpp  modelo.cpp  modeloColas.cpp  row.cpp  salida.cpp  textosMenus.cpp  vector.cpp
